Update Home untuk penambahan add dan display data

--- a/home.html
+++ b/home.html
@@ -40,11 +40,11 @@
 
 
         <img src="./aset/Animation.png" alt="" class="feature-img">
-
-
     </div>
-
     </div>
+         <ul id="charactersList" class="jsstyle"></ul>
+    </div>
+    <script src="script.js"></script>
     </div>
 </body>
 </html>
